skeleton is ready

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
 #hello {
 	color: red;
 }
+.db-content {
+	margin: 20px;
+}
+
+.db-main {
+
+}
+
+.db-header {
+
+}
+.db-navigation {
+
+}
+.db-new-topic {
+
+}
+
+.db-content {
+
+}
+.db-topic-content {
+
+}
