--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,92 @@
 #hello {
 	color: red;
 }
-.db-content {
-	margin: 20px;
-}
 
 .db-main {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 1.2em;
+  color: #CCC;
+	margin: 20px;
+	width: 95%;
+	height: 95%;
+	display: block;
 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.db-new-topic-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+	background-color:grey;
+	opacity: 0.5;
+
+}
+.db-new-topic {
+	display: inline-block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 70%;
+  height: 70%;
+  margin: auto;
+	background-color:white;
+	border:2px solid #DDD;
+	text-align:left;
+	overflow: auto;
+}
+.db-new-topic-header {
+	text-align: right;
+}
+.db-new-topic-content {
+
+}
+
+.btn-close-new-topic {
+	margin:10px;
+	color: #ccc;
+}
+.btn-close-new-topic:hover {
+	color: #444
 }
 
 .db-header {
-
+	width: 100%;
+	margin: 20px;
 }
 .db-navigation {
+	margin: 10px;
+	width: auto;
+	text-align: right;
+	border: 1px solid #DDD;
 
+}
+
+.btn-new-save {
+	margin:10px;
+	color: #ccc;
+}
+.btn-new-save:hover {
+	color: #444
 }
 .db-new-topic {
 
 }
 
 .db-content {
-
+	width: auto;
+	margin: 10px;
 }
 .db-topic-content {
-
+	width: auto;
+	margin: 10px;
+}
+.db-footer {
+	width: auto;
+	margin: 10px;
 }
