--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,12 @@
-#hello {
-	color: red;
-}
 
-tr:hover {
-
-}
 .db-main {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 1.2em;
   color: #CCC;
 	margin: 20px;
 	width: 95%;
-	height: 95%;
+	height:auto;
 	display: block;
-
   margin-left: auto;
   margin-right: auto;
 }
@@ -29,15 +22,11 @@ tr:hover {
 
 }
 .db-new-topic {
-	display: inline-block;
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 70%;
-  height: 70%;
-  margin: auto;
+  bottom: 0%;
+  width: 100%;
+	left: 0%;
+  height: 40%;
 	background-color:white;
 	border:2px solid #DDD;
 	text-align:left;
@@ -102,6 +91,7 @@ tr:hover {
 	background-color: #ccc;
 	color: #fff;
 }
+
 .db-topics-row {
 	background-color: #fff;
 	color: #ccc;
@@ -120,7 +110,9 @@ tr:hover {
 
 .db-topic-content {
 	width: auto;
-	margin: 10px;
+	border: 1px solid #ccc;
+	background-color: #eee;
+	height:auto;
 }
 .db-footer {
 	text-align: center;
