--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
   bottom: 0%;
   width: 100%;
 	left: 0%;
-  height: 40%;
+  height: 42%;
 	background-color:white;
 	border:2px solid #DDD;
 	text-align:left;
@@ -42,22 +42,26 @@
 }
 
 .db-new-topic-input {
-		width:300px;
+		width:50%;
 }
 
 
 .db-new-topic-content-header {
 	text-align: left;
+
 }
 .db-new-topic-header {
 	text-align: right;
+	margin: 10px;
 }
 .db-new-topic-content {
+	margin: 10px;
 
 }
 
 .db-new-topic-footer{
 	text-align: right;
+	margin: 10px;
 }
 
 
