--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ table:hover {
   bottom: 0%;
   width: 100%;
 	left: 0%;
-  height: 42%;
+  height: 60%;
 	background-color:white;
 	border:2px solid #DDD;
 	text-align:left;
@@ -134,6 +134,7 @@ table:hover {
 .db-topics-header:hover {
 	background-color: #ccc;
 	color: #fff;
+	font-style: bold;
 }
 
 .db-topics-row {
@@ -142,10 +143,11 @@ table:hover {
 }
 .db-topics-row:hover {
 	background-color: #eee;
-	color: #ccc;
+	color: #333;
 	border-bottom: 4px solid #ccc;
 	cursor: pointer;
 }
+
 
 .db-topics-row-td {
 	padding: 6px;
@@ -153,6 +155,7 @@ table:hover {
 .db-topics-row-td:hover {
 	padding: 6px;
 	background-color: #eee;
+	color: #333;
 	cursor: pointer;
 }
 .db-topics-header-td {
@@ -169,12 +172,45 @@ table:hover {
 	height:auto;
 	border-bottom: 1px solid #ccc;
 	border-top: 1px solid #ccc;
+	background-color: #eee;
+	color: #333;
 }
 .db-topic-content:hover {
 	width: auto;
 	margin: 20px;
 	height:auto;
+	background-color: #eee;
+	color: #333;
+}
 
+.db-topics-content-td {
+	width: auto;
+	margin: 20px;
+	height:auto;
+	background-color: #fff;
+	color: #333;
+}
+.db-topics-content-td:hover {
+	width: auto;
+	margin: 20px;
+	height:auto;
+	background-color: #fff;
+	color: #333;
+}
+
+.db-topics-content-tr {
+	width: auto;
+	margin: 20px;
+	height:auto;
+	background-color: #fff;
+	color: #333;
+}
+.db-topics-content-tr:hover {
+	width: auto;
+	margin: 20px;
+	height:auto;
+	background-color: #fff;
+	color: #333;
 }
 
 .db-footer {
