--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,38 @@ table:hover {
 
 
 .btn {
-	margin:10px;
-	color: #ccc;
+	margin:0px;
+	color: #999;
+
 }
 .btn:hover {
 	color: #444
+}
+.btn-del-topic {
+	background-image: url(../img/trash-16.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 18px;
+	width: 22px;
+	padding:2px;
+}
+
+.btn-pin {
+	background-image: url(../img/pin-16.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 18px;
+	width: 22px;
+	padding:2px;
+}
+
+.btn-edit-topic {
+	background-image: url(../img/edit-16.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 18px;
+	width: 22px;
+	padding:2px;
 }
 
 .db-header {
@@ -118,7 +145,7 @@ table:hover {
 }
 .btn-reply {
 	width: 80px;
-	color: #ccc;
+	color: #999;
 	font-size: 0.6em;
 }
 
@@ -222,6 +249,7 @@ table:hover {
 	color: #333;
 }
 
+
 .db-topics-content-tr {
 	width: auto;
 	margin: 20px;
@@ -229,6 +257,8 @@ table:hover {
 	background-color: #fff;
 	color: #333;
 }
+
+
 .db-topics-content-tr:hover {
 	width: auto;
 	margin: 20px;
@@ -236,6 +266,7 @@ table:hover {
 	background-color: #fff;
 	color: #333;
 }
+
 
 .db-footer {
 	text-align: center;
